
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct se_device {int dummy; } ;
struct rd_dev {int rd_dev_id; int rd_page_count; int sg_table_count; } ;
typedef int ssize_t ;


 int PAGE_SIZE ;
 struct rd_dev* RD_DEV (struct se_device*) ;
 int sprintf (char*,char*,int,...) ;

__attribute__((used)) static ssize_t rd_show_configfs_dev_params(struct se_device *dev, char *b)
{
 struct rd_dev *rd_dev = RD_DEV(dev);

 ssize_t bl = sprintf(b, "TCM RamDisk ID: %u  RamDisk Makeup: rd_mcp\n",
   rd_dev->rd_dev_id);
 bl += sprintf(b + bl, "        PAGES/PAGE_SIZE: %u*%lu"
   "  SG_table_count: %u\n", rd_dev->rd_page_count,
   PAGE_SIZE, rd_dev->sg_table_count);
 return bl;
}
